Now the bzr version is part of the version inside aiki and on all builds.
We need better tracking of what is breaking.

Also, added some cleanup to built files in the root.

We need some release instructions.

--- a/Makefile.am
+++ b/Makefile.am
@@ -68,7 +68,8 @@ aiki_doc_DATA = \
 # Additional files to remove on dist-clean
 DISTCLEANFILES = \
 	$$($(FIND) . -name $(distdir).\*) \
-	$$($(FIND) . -name $(distdir)-\*)
+	$$($(FIND) . -name $(distdir)-\*) \
+	$$($(FIND) . -maxdepth 1 -name "*.in" | sed 's/.in//')
 
 # Additional files and directories to remove on clean
 clean-local :
