--- a/configure.ac
+++ b/configure.ac
@@ -340,7 +340,7 @@ VAR_LIST_ADD AIKI_LOGIN_URL $AIKI_LOGIN_URL
 
 
 AC_ARG_VAR(AIKI_REWRITE_BASE,[Set the rewrite-base [default: AIKI_REWRITE_BASE=/]])
-if $TEST -z $AIKI_REWRITE_BASE; then AC_SUBST(AIKI_REWRITE_BASE,/])
+if $TEST -z $AIKI_REWRITE_BASE; then AC_SUBST(AIKI_REWRITE_BASE,[/])
 fi
 VAR_LIST_ADD AIKI_REWRITE_BASE $AIKI_REWRITE_BASE
 
