--- a/configure.ac
+++ b/configure.ac
@@ -341,8 +341,8 @@ fi
 VAR_LIST_ADD AIKI_LOGIN_URL $AIKI_LOGIN_URL
 
 
-AC_ARG_VAR(AIKI_REWRITE_BASE,[Set the rewrite-base [default: AIKI_REWRITE_BASE=/]])
-if $TEST -z $AIKI_REWRITE_BASE; then AC_SUBST(AIKI_REWRITE_BASE,[/])
+AC_ARG_VAR(AIKI_REWRITE_BASE,[Set the rewrite-base [default: AIKI_REWRITE_BASE=/$PACKAGE]])
+if $TEST -z $AIKI_REWRITE_BASE; then AC_SUBST(AIKI_REWRITE_BASE,[/$PACKAGE])
 fi
 VAR_LIST_ADD AIKI_REWRITE_BASE $AIKI_REWRITE_BASE
 
