--- a/configure.ac
+++ b/configure.ac
@@ -21,9 +21,9 @@
 # Autoconf minimum version required
 AC_PREREQ(2.59)
 
+# Parse the package version as defined in the source code
 m4_define([pkgversion],
- [m4_esyscmd(echo -n $(grep define\(\'AIKI_VERSION\',\'.\\+\'\)\; src/aiki.php \
-                       | sed s/.*define\(\'.\\+\',\''\(.*\)'\'\).*/'\1'/))])
+  [m4_esyscmd(echo -n $(sed -n 's/.*define.\+AIKI_VERSION[[^0-9]]\+\([[0-9.]]\+\)[[^0-9]]\+/\1/p' src/aiki.php))])
 
 # Initialize autoconf, set the name of this package and version
 AC_INIT([aiki], [pkgversion], [https://bugs.launchpad.net/aikiframework],,[http://aikiframework.org])
