Replaced echo -n with more standard/portable command printf %s. Potential fix for Bug #791639 Errors on Mac OS X

--- a/configure.ac
+++ b/configure.ac
@@ -23,7 +23,7 @@ AC_PREREQ(2.59)
 
 # Parse the package version as defined in the source code
 m4_define([pkgversion],
-  [m4_esyscmd(echo -n $(sed -n 's/.*define.\+AIKI_VERSION[[^0-9]]\+\([[0-9.]]\+\)[[^0-9]]\+/\1/p' src/aiki.php))])
+  [m4_esyscmd(printf %s $(sed -n 's/.*define.\+AIKI_VERSION[[^0-9]]\+\([[0-9.]]\+\)[[^0-9]]\+/\1/p' src/aiki.php))])
 
 # Initialize autoconf, set the name of this package and version
 AC_INIT([aiki], [pkgversion], [https://bugs.launchpad.net/aikiframework],,[http://aikiframework.org])
