Added additional piped seds to work around Mac OS X regular expression incompatibility.  Potential fix for Bug #791639 Errors on Mac OS X. Bumped Aiki FIX-version number.

--- a/configure.ac
+++ b/configure.ac
@@ -24,7 +24,7 @@ AC_PREREQ(2.59)
 # Parse the package version as defined in the source code
 m4_define([pkgversion],
   [m4_esyscmd(printf %s $(grep 'define.\+AIKI_VERSION' src/aiki.php \
-                         | sed 's/.*,[[^0-9]]\+\([[0-9.]]\+\).*/\1/'))])
+    | sed s/.*,// | sed s/\'//g | sed s/\(*\).*\;// | sed 's/\t*\ *//g'))])
 
 #  [m4_esyscmd(printf %s $(sed -n 's/.*define.\+AIKI_VERSION[[^0-9]]\+\([[0-9.]]\+\)[[^0-9]]\+/\1/p' src/aiki.php))])
 
