Added initial and unfinished but working log utility ;-). Bumped aiki fix-version number.

--- a/src/system/libraries/Makefile.am
+++ b/src/system/libraries/Makefile.am
@@ -39,7 +39,8 @@ aiki_src_files = \
 	sql_markup.php \
 	text.php \
 	url.php \
-	wiki.php
+	wiki.php \
+	Log.php
 
 # Subdirectories to be built
 SUBDIRS =
