Added Log Viewer to the Admin Interface. Added log content styles to the global style.css. Bumped the aiki fix-number.

--- a/src/assets/apps/admin/Makefile.am
+++ b/src/assets/apps/admin/Makefile.am
@@ -24,7 +24,8 @@ aiki_src_files = \
 	control_panel.js \
 	database_forms.php \
 	events.php \
-	urls_widgets.php
+	urls_widgets.php \
+	log_view.php
 
 # Subdirectories to be built
 SUBDIRS = \
