Moved src/system/libraries to src/libs. Moved src/system/core.php to src/libs/core.php. Moved src/system/widgets.php to src/libs/widgets.php. Moved src/system/sql to src/sql. Moved src/system/database to src/libs/database. Renamed  to .

--- a/Makefile.am
+++ b/Makefile.am
@@ -110,9 +110,9 @@ install-mysql-database:
 	@$(MYSQL) -v -u $(DB_USER) -p$(DB_PASS) \
 	-e "CREATE DATABASE IF NOT EXISTS $(DB_NAME) \
 	DEFAULT CHARACTER SET $(DB_ENCODE) COLLATE utf8_general_ci;" \
-	&& $(CAT) $(abs_top_srcdir)/src/system/sql/CreateTables.sql \
-	$(abs_top_srcdir)/src/system/sql/InsertDefaults.sql \
-	$(abs_top_builddir)/src/system/sql/InsertVariable.sql \
+	&& $(CAT) $(abs_top_srcdir)/src/sql/CreateTables.sql \
+	$(abs_top_srcdir)/src/sql/InsertDefaults.sql \
+	$(abs_top_builddir)/src/sql/InsertVariable.sql \
 	| $(MYSQL) -B -u $(DB_USER) -p$(DB_PASS) $(DB_NAME)
 
 # Additional things to do on install
