--- a/man/man.in
+++ b/man/man.in
@@ -86,17 +86,7 @@ To optionally set the URL to the web application, type:
 .SH "AUTHORS"
 .RS 0
 .nf
-Bassel Safadi               Lead Developer/Programmer
-Jon Phillips                Project Manager/Developer
-Christopher Adams           Developer
-Barry Threw                 Developer
-Michi Krnac                 Developer
-Ronaldo Barbachano          Developer
-Vera Lobatcheva             Graphic Design
-Brad Phillips               Developer/Graphic Design
-Steven Garcia               Developer/Programmer
-Fabricatorz, LLC            Developers/Graphic Design
-AikiLab Singapore, PTE LTD  Developers/Graphic Design
+@AUTHORS_TITLES@
 
 .SH "REPORTING BUGS"
 Report bugs to: @PACKAGE_BUGREPORT@
