* nuked aiki holding tanks in the assets folder where custom aiki code was to be migrated to, but want to start peeling back so we can separate admin from custom/site/app folder. * added comments to php.php code * updated makefiles to remove the */aiki/ folders * This will require a full autogen.sh

--- a/src/assets/apps/Makefile.am
+++ b/src/assets/apps/Makefile.am
@@ -23,13 +23,11 @@ aiki_src_files = \
 
 # Subdirectories to be built
 SUBDIRS = \
-	admin \
-	aiki
+	admin
 
 # Subdirectories to distribute
 DIST_SUBDIRS = \
-	admin \
-	aiki
+	admin
 
 # Additional files to distribute
 EXTRA_DIST = \
