--- a/src/assets/extensions/Makefile.am
+++ b/src/assets/extensions/Makefile.am
@@ -22,10 +22,10 @@ aiki_src_files = \
 	readme
 
 # Subdirectories to be built
-SUBDIRS = aiki
+SUBDIRS = 
 
 # Subdirectories to distribute
-DIST_SUBDIRS = aiki
+DIST_SUBDIRS = 
 
 # Additional files to distribute
 EXTRA_DIST = \
