--- a/src/assets/images/Makefile.am
+++ b/src/assets/images/Makefile.am
@@ -24,10 +24,10 @@ aiki_src_files = \
 	favicon.ico
 
 # Subdirectories to be built
-SUBDIRS = aiki
+SUBDIRS = 
 
 # Subdirectories to distribute
-DIST_SUBDIRS = aiki
+DIST_SUBDIRS =
 
 # Additional files to distribute
 EXTRA_DIST = \
